delete + update playlist features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="create">Create</string>
     <string name="rename_playlist">Rename playlist</string>
     <string name="new_playlist_name">New playlist name</string>
+    <string name="delete_playlist_from_device">Delete playlist from device?</string>
+    <string name="message_delete">Playlist will be deleted permanently from device.</string>
 </resources>
