--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,17 @@
     <string name="title_music">Music</string>
     <string name="title_video">Video</string>
     <string name="title_playlist">Playlist</string>
+    <string name="default_playback_time">0:00</string>
+    <string name="play_pause_btn">Play pause</string>
+    <string name="skip_forward_btn">Skip forward</string>
+    <string name="skip_backward_btn">Skip backward</string>
+    <string name="repeat_btn">Repeat</string>
+    <string name="shuffle_btn">Shuffle</string>
+    <string name="default_song_name">Song name</string>
+    <string name="default_artist_name">Artist name</string>
+    <string name="album_artwork">Album artwork</string>
+    <string name="seekbar">Seekbar</string>
+    <string name="more_features_btn">Music more features</string>
+    <string name="close">Close</string>
+    <string name="now_playing">Now playing</string>
 </resources>
