Support background music playback and notification control

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="now_playing">Now playing</string>
     <string name="default_album_art">Default album art</string>
     <string name="playback">Playback</string>
+    <string name="notification_channel_name">Music playback</string>
+    <string name="notification_channel_description">Display and control music playback</string>
 </resources>
