--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_music">Music</string>
     <string name="title_video">Video</string>
     <string name="title_playlist">Playlist</string>
+    <string name="item_sort_by_length">Sort by length</string>
+    <string name="item_sort_by_name">Sort by name</string>
+    <string name="item_list_grid_change">Change to list/grid</string>
 </resources>
