--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,14 @@
     <string name="shuffle_btn">Shuffle</string>
     <string name="default_song_name">Song name</string>
     <string name="default_artist_name">Artist name</string>
-    <string name="album_artwork">Album artwork</string>
+    <string name="music_artwork_background">Music artwork background</string>
     <string name="seekbar">Seekbar</string>
-    <string name="more_features_btn">Music more features</string>
+    <string name="more_features_btn">More music features</string>
     <string name="close">Close</string>
     <string name="now_playing">Now playing</string>
     <string name="default_album_art">Default album art</string>
     <string name="playback">Playback</string>
     <string name="notification_channel_name">Music playback</string>
     <string name="notification_channel_description">Display and control music playback</string>
+    <string name="music_artwork">Music artwork</string>
 </resources>
