--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="item_sort_by_length">Sort by length</string>
     <string name="item_sort_by_name">Sort by name</string>
     <string name="item_list_grid_change">Change to list/grid</string>
+    <string name="description_options_icon">A gray options icon</string>
+    <string name="video_duration_placeholder">-01:00</string>
+    <string name="video_name_placeholder">VIDEO.MP4</string>
+    <string name="description_play_arrow_icon">A white play arrow icon</string>
 </resources>
