--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="file_size">File size</string>
     <string name="duration">Duration</string>
     <string name="file_name">File name</string>
+    <string name="sort">Sort</string>
 </resources>
