--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,12 @@
     <string name="duration">Duration</string>
     <string name="file_name">File name</string>
     <string name="sort">Sort by name</string>
+    <string name="add_to_queue">Add to queue</string>
+    <string name="go_to_queue_list">Go to queue list</string>
+    <string name="clear_queue_list">Clear queue list</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="queue">Queue</string>
+    <string name="save_to_playlist">Save to playlist</string>
+    <string name="clear">Clear</string>
 </resources>
