--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_search">Search</string>
+    <string name="detail">Detail</string>
+    <string name="delete">Delete</string>
+    <string name="add_to_playlist">Add to playlist</string>
 </resources>
