--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="detail">Detail</string>
     <string name="delete">Delete</string>
     <string name="add_to_playlist">Add to playlist</string>
+    <string name="switch_view">Switch View</string>
 </resources>
