--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,9 @@
     <string name="default_album_name">Album name</string>
     <string name="default_album_details_description">Number of songs: 0</string>
     <string name="play_all_songs_from_this_album">Play all songs from this album</string>
-    <string name="album_details_artwork">Album details\' artwork</string>
-    <string name="album_details_s_small_artwork">Album details\'s small artwork</string>
+    <string name="album_details_artwork">Album details artwork</string>
+    <string name="album_details_s_small_artwork">Album details small artwork</string>
+    <string name="songs">Songs</string>
+    <string name="artists">Artists</string>
+    <string name="albums">Albums</string>
 </resources>
