Make some improvements to video library layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,8 +84,8 @@
     <string name="clear">Clear</string>
     <string name="my_favourites">My favourites</string>
     <string name="watch_later_list">Watch later list</string>
-    <string name="item_sort_by_length">Sort by length</string>
-    <string name="item_sort_by_name">Sort by name</string>
+    <string name="sort_by_length">Length</string>
+    <string name="sort_by_name">Name</string>
     <string name="description_options_icon">A gray options icon</string>
     <string name="item_list_grid_change">Change to list/grid</string>
     <string name="video_duration_placeholder">-01:00</string>
@@ -112,4 +112,5 @@
     <string name="dialog_video_info_length_textview">Length:</string>
     <string name="list">List</string>
     <string name="grid">Grid</string>
+    <string name="sort_by">Sort by</string>
 </resources>
