--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="list">List</string>
     <string name="grid">Grid</string>
     <string name="sort_by">Sort by</string>
+    <string name="title_overview">Overview</string>
 </resources>
