--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="sort_by">Sort by</string>
     <string name="title_overview">Overview</string>
     <string name="recent_videos_textview">Recent videos</string>
+    <string name="most_watched_videos_textview">Most watched videos</string>
 </resources>
