--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@
     <string name="most_watched_videos_textview">Most watched videos</string>
     <string name="recent_songs_textview">Recent songs</string>
     <string name="most_listened_songs_textview">Most listened songs</string>
+    <string name="song_name_placeholder">SONG.MP3</string>
 </resources>
