--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string name="recent_songs_textview">Recent songs</string>
     <string name="most_listened_songs_textview">Most listened songs</string>
     <string name="song_name_placeholder">SONG.MP3</string>
+    <string name="unknown_artist_textview">Unknown</string>
 </resources>
