--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,55 +3,55 @@
     <string name="title_music">Music</string>
     <string name="title_video">Video</string>
     <string name="title_playlist">Playlist</string>
-    <string name="default_playback_time">0:00</string>
-    <string name="play_pause_btn">Play pause</string>
-    <string name="skip_next_btn">Skip to next song</string>
-    <string name="skip_prev_btn">Skip to previous song</string>
+    <string name="default_playback_time" translatable="false">0:00</string>
+    <string name="play_pause_btn" translatable="false">Play pause</string>
+    <string name="skip_next_btn" translatable="false">Skip to next song</string>
+    <string name="skip_prev_btn" translatable="false">Skip to previous song</string>
     <string name="repeat_btn">Repeat</string>
     <string name="shuffle_btn">Shuffle</string>
     <string name="default_song_name">Song name</string>
     <string name="default_artist_name">Artist name</string>
-    <string name="music_artwork_background">Music artwork background</string>
-    <string name="seekbar">Seekbar</string>
-    <string name="more_features_btn">More music features</string>
+    <string name="music_artwork_background" translatable="false">Music artwork background</string>
+    <string name="seekbar" translatable="false">Seekbar</string>
+    <string name="more_features_btn" translatable="false">More music features</string>
     <string name="close">Close</string>
     <string name="now_playing">Now playing</string>
-    <string name="default_album_art">Default album art</string>
+    <string name="default_album_art" translatable="false">Default album art</string>
     <string name="playback">Playback</string>
-    <string name="notification_channel_name">Background music playback</string>
-    <string name="notification_channel_description">Display and control music playback when running in background</string>
-    <string name="music_artwork">Music artwork</string>
-    <string name="playlist">Playlist</string>
+    <string name="notification_channel_name" translatable="false">Background music playback</string>
+    <string name="notification_channel_description" translatable="false">Display and control music playback when running in background</string>
+    <string name="music_artwork" translatable="false">Music artwork</string>
+    <string name="playlist" translatable="false">Playlist</string>
     <string name="add_to_favorite">Add to favorite</string>
     <string name="add_to_listen_later">Add to listen later</string>
     <string name="add_to_playlist">Add to playlist</string>
-    <string name="audio_visualizer_permission_rationale_title">Audio recording permission needed</string>
-    <string name="audio_visualizer_permission_rationale_message">This app needs to record audio to render the music visualization. The audio won\'t actually be saved.</string>
-    <string name="ok">OK</string>
-    <string name="disable_music_visual">Disable music visual</string>
-    <string name="audio_visualizer_permission_denied_notice_title">Audio visualizer disabled</string>
-    <string name="audio_visualizer_permission_denied_notice_message">Audio visualizer disabled because audio recording permission is denied</string>
+    <string name="audio_visualizer_permission_rationale_title" translatable="false">Audio recording permission needed</string>
+    <string name="audio_visualizer_permission_rationale_message" translatable="false">This app needs to record audio to render the music visualization. The audio won\'t actually be saved.</string>
+    <string name="ok" translatable="false">OK</string>
+    <string name="disable_music_visual" translatable="false">Disable music visual</string>
+    <string name="audio_visualizer_permission_denied_notice_title" translatable="false">Audio visualizer disabled</string>
+    <string name="audio_visualizer_permission_denied_notice_message" translatable="false">Audio visualizer disabled because audio recording permission is denied</string>
     <string name="action_search">Search</string>
     <string name="detail">Detail</string>
-    <string name="switch_view">Switch View</string>
-    <string name="open_song_item_context_menu">Open song item context menu</string>
+    <string name="switch_view" translatable="false">Switch View</string>
+    <string name="open_song_item_context_menu" translatable="false">Open song item context menu</string>
     <string name="show_as">Show as</string>
-    <string name="artist_artwork">Artist artwork</string>
-    <string name="small_artist_artwork">Small artist artwork</string>
-    <string name="play_all_songs_from_this_artist">Play all songs from this artist</string>
+    <string name="artist_artwork" translatable="false">Artist artwork</string>
+    <string name="small_artist_artwork" translatable="false">Small artist artwork</string>
+    <string name="play_all_songs_from_this_artist" translatable="false">Play all songs from this artist</string>
     <string name="default_artist_details_description">This artist has 0 song(s) and 0 album(s)</string>
     <string name="default_album_name">Album name</string>
     <string name="default_album_details_description">Number of songs: 0</string>
     <string name="play_all_songs_from_this_album">Play all songs from this album</string>
-    <string name="album_details_artwork">Album details artwork</string>
-    <string name="album_details_s_small_artwork">Album details small artwork</string>
+    <string name="album_details_artwork" translatable="false">Album details artwork</string>
+    <string name="album_details_s_small_artwork" translatable="false">Album details small artwork</string>
     <string name="songs">Songs</string>
     <string name="artists">Artists</string>
-    <string name="albums">Albums</string>
-    <string name="read_external_storage_permission_denied_notice_title">Cannot read media files</string>
-    <string name="read_external_storage_permission_denied_notice_message">This app cannot read media files on your device because the permission has been denied.</string>
-    <string name="image_for_thumbnail">Image for thumbnail</string>
-    <string name="navigate_next">Navigate next</string>
+    <string name="albums" translatable="false">Albums</string>
+    <string name="read_external_storage_permission_denied_notice_title" translatable="false">Cannot read media files</string>
+    <string name="read_external_storage_permission_denied_notice_message" translatable="false">This app cannot read media files on your device because the permission has been denied.</string>
+    <string name="image_for_thumbnail" translatable="false">Image for thumbnail</string>
+    <string name="navigate_next" translatable="false">Navigate next</string>
     <string name="new_playlist">Create Playlist</string>
     <string name="add_more">Add more</string>
     <string name="play_all">Play All</string>
@@ -59,79 +59,93 @@
     <string name="search">Search</string>
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
-    <string name="play_next">Play next</string>
+    <string name="play_next" translatable="false">Play next</string>
     <string name="create_new_playlist">Create new playlist</string>
     <string name="enter_playlist_name">Enter playlist name</string>
     <string name="create">Create</string>
-    <string name="rename_playlist">Rename playlist</string>
-    <string name="new_playlist_name">New playlist name</string>
-    <string name="delete_playlist_from_device">Delete playlist from device?</string>
-    <string name="message_delete">This will be deleted permanently from device.</string>
-    <string name="remove">Remove</string>
-    <string name="properties">Properties</string>
-    <string name="date">Date</string>
-    <string name="location">Location</string>
-    <string name="file_size">File size</string>
-    <string name="duration">Duration</string>
-    <string name="file_name">File name</string>
-    <string name="sort">Sort by name</string>
-    <string name="add_to_queue">Add to queue</string>
-    <string name="go_to_queue_list">Go to queue list</string>
-    <string name="clear_queue_list">Clear queue list</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="queue">Queue</string>
-    <string name="save_to_playlist">Save to playlist</string>
-    <string name="clear">Clear</string>
-    <string name="my_favourites">My favourites</string>
-    <string name="watch_later_list">Watch later list</string>
-    <string name="sort_by_length">Length</string>
-    <string name="sort_by_name">Name</string>
-    <string name="description_options_icon">A gray options icon</string>
-    <string name="item_list_grid_change">Change to list/grid</string>
-    <string name="video_duration_placeholder">-01:00</string>
-    <string name="video_name_placeholder">VIDEO.MP4</string>
-    <string name="description_play_arrow_icon">A white play arrow icon</string>
-    <string name="all_videos_textView">All videos</string>
-    <string name="dialog_bottom_video_name">VIDEO NAME</string>
-    <string name="bottom_dialog_option_info">Information</string>
-    <string name="dialog_bottom_option_playlist">Add to playlist</string>
-    <string name="dialog_bottom_option_rename">Rename</string>
-    <string name="dialog_bottom_option_delete">Delete</string>
-    <string name="dialog_bottom_option_share">Share</string>
-    <string name="dialog_bottom_option_information_ic">Bottom dialog option - Information</string>
-    <string name="dialog_bottom_option_playlist_ic">Bottom dialog option - Add to playlist</string>
-    <string name="dialog_bottom_option_rename_ic">Bottom dialog option - Rename</string>
-    <string name="dialog_bottom_option_share_ic">Bottom dialog option - Share</string>
-    <string name="dialog_bottom_option_delete_ic">Bottom dialog option - Delete</string>
-    <string name="item_search">Search</string>
-    <string name="dialog_video_info_name_textview">VIDEO NAME</string>
-    <string name="dialog_video_info_path_textview">File path:</string>
-    <string name="dialog_video_info_size_textview">File size:</string>
-    <string name="dialog_video_info_date_textview">Date taken:</string>
-    <string name="dialog_video_info_resolution_textview">Resolution:</string>
-    <string name="dialog_video_info_length_textview">Length:</string>
-    <string name="list">List</string>
-    <string name="grid">Grid</string>
-    <string name="sort_by">Sort by</string>
-    <string name="ascending">Ascending</string>
-    <string name="descending">Descending</string>
-    <string name="sort_by_title">Sort by title</string>
-    <string name="title">Title</string>
-    <string name="time_added">Time added</string>
-    <string name="name">Name</string>
-    <string name="number_of_albums">Number of albums</string>
-    <string name="number_of_songs">Number of songs</string>
-    <string name="release_year">Release year</string>
-    <string name="title_overview">Overview</string>
-    <string name="recent_videos_textview">Recent videos</string>
-    <string name="most_watched_videos_textview">Most watched videos</string>
-    <string name="recent_songs_textview">Recent songs</string>
-    <string name="most_listened_songs_textview">Most listened songs</string>
-    <string name="song_name_placeholder">SONG.MP3</string>
-    <string name="unknown_artist_textview">Unknown</string>
-    <string name="artist_name">Artist:</string>
-    <string name="album_name">Album:</string>
-    <string name="genre">Genre:</string>
-    <string name="duration2">Duration:</string>
-    <string name="time_added2">Time added:</string>
+    <string name="rename_playlist" translatable="false">Rename playlist</string>
+    <string name="new_playlist_name" translatable="false">New playlist name</string>
+    <string name="delete_playlist_from_device" translatable="false">Delete playlist from device?</string>
+    <string name="message_delete" translatable="false">This will be deleted permanently from device.</string>
+    <string name="remove" translatable="false">Remove</string>
+    <string name="properties" translatable="false">Properties</string>
+    <string name="date" translatable="false">Date</string>
+    <string name="location" translatable="false">Location</string>
+    <string name="file_size" translatable="false">File size</string>
+    <string name="duration" translatable="false">Duration</string>
+    <string name="file_name" translatable="false">File name</string>
+    <string name="sort" translatable="false">Sort by name</string>
+    <string name="add_to_queue" translatable="false">Add to queue</string>
+    <string name="go_to_queue_list" translatable="false">Go to queue list</string>
+    <string name="clear_queue_list" translatable="false">Clear queue list</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="queue" translatable="false">Queue</string>
+    <string name="save_to_playlist" translatable="false">Save to playlist</string>
+    <string name="clear" translatable="false">Clear</string>
+    <string name="my_favourites" translatable="false">My favourites</string>
+    <string name="watch_later_list" translatable="false">Watch later list</string>
+    <string name="sort_by_length" translatable="false">Length</string>
+    <string name="sort_by_name" translatable="false">Name</string>
+    <string name="description_options_icon" translatable="false">A gray options icon</string>
+    <string name="item_list_grid_change" translatable="false">Change to list/grid</string>
+    <string name="video_duration_placeholder" translatable="false">-01:00</string>
+    <string name="video_name_placeholder" translatable="false">VIDEO.MP4</string>
+    <string name="description_play_arrow_icon" translatable="false">A white play arrow icon</string>
+    <string name="all_videos_textView" translatable="false">All videos</string>
+    <string name="dialog_bottom_video_name" translatable="false">VIDEO NAME</string>
+    <string name="bottom_dialog_option_info" translatable="false">Information</string>
+    <string name="dialog_bottom_option_playlist" translatable="false">Add to playlist</string>
+    <string name="dialog_bottom_option_rename" translatable="false">Rename</string>
+    <string name="dialog_bottom_option_delete" translatable="false">Delete</string>
+    <string name="dialog_bottom_option_share" translatable="false">Share</string>
+    <string name="dialog_bottom_option_information_ic" translatable="false">Bottom dialog option - Information</string>
+    <string name="dialog_bottom_option_playlist_ic" translatable="false">Bottom dialog option - Add to playlist</string>
+    <string name="dialog_bottom_option_rename_ic" translatable="false">Bottom dialog option - Rename</string>
+    <string name="dialog_bottom_option_share_ic" translatable="false">Bottom dialog option - Share</string>
+    <string name="dialog_bottom_option_delete_ic" translatable="false">Bottom dialog option - Delete</string>
+    <string name="item_search" translatable="false">Search</string>
+    <string name="dialog_video_info_name_textview" translatable="false">VIDEO NAME</string>
+    <string name="dialog_video_info_path_textview" translatable="false">File path:</string>
+    <string name="dialog_video_info_size_textview" translatable="false">File size:</string>
+    <string name="dialog_video_info_date_textview" translatable="false">Date taken:</string>
+    <string name="dialog_video_info_resolution_textview" translatable="false">Resolution:</string>
+    <string name="dialog_video_info_length_textview" translatable="false">Length:</string>
+    <string name="list" translatable="false">List</string>
+    <string name="grid" translatable="false">Grid</string>
+    <string name="sort_by" translatable="false">Sort by</string>
+    <string name="ascending" translatable="false">Ascending</string>
+    <string name="descending" translatable="false">Descending</string>
+    <string name="sort_by_title" translatable="false">Sort by title</string>
+    <string name="title" translatable="false">Title</string>
+    <string name="time_added" translatable="false">Time added</string>
+    <string name="name" translatable="false">Name</string>
+    <string name="number_of_albums" translatable="false">Number of albums</string>
+    <string name="number_of_songs" translatable="false">Number of songs</string>
+    <string name="release_year" translatable="false">Release year</string>
+    <string name="title_overview" translatable="false">Overview</string>
+    <string name="recent_videos_textview" translatable="false">Recent videos</string>
+    <string name="most_watched_videos_textview" translatable="false">Most watched videos</string>
+    <string name="recent_songs_textview" translatable="false">Recent songs</string>
+    <string name="most_listened_songs_textview" translatable="false">Most listened songs</string>
+    <string name="song_name_placeholder" translatable="false">SONG.MP3</string>
+    <string name="unknown_artist_textview" translatable="false">Unknown</string>
+    <string name="artist_name" translatable="false">Artist:</string>
+    <string name="album_name" translatable="false">Album:</string>
+    <string name="genre" translatable="false">Genre:</string>
+    <string name="duration2" translatable="false">Duration:</string>
+    <string name="time_added2" translatable="false">Time added:</string>
+    <!-- Preference Titles -->
+    <string name="messages_header" translatable="false">Messages</string>
+    <string name="sync_header" translatable="false">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title" translatable="false">Your signature</string>
+    <string name="reply_title" translatable="false">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title" translatable="false">Sync email periodically</string>
+    <string name="attachment_title" translatable="false">Download incoming attachments</string>
+    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
 </resources>
