--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,5 @@
     <string name="music_queue">Song</string>
     <string name="watch_later">Watch Later</string>
     <string name="my_favourite">My Favourite</string>
+    <string name="numbers_of_item">Numbers of item</string>
 </resources>
