--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -58,7 +58,7 @@
     <string name="sort_by_length" translatable="false">Độ dài</string>
     <string name="sort_by_name" translatable="false">Tên</string>
     <string name="my_favourites" translatable="false">Yêu thích</string>
-    <string name="watch_later_list" translatable="false">Xem sau</string>
+    <string name="watch_later" translatable="false">Xem sau</string>
     <string name="save_to_playlist">Lưu vào Playlist</string>
     <string name="grid" translatable="false">Lưới</string>
     <string name="list" translatable="false">Danh sách</string>
@@ -70,7 +70,7 @@
     <string name="english">tiếng Anh</string>
     <string name="vietnamese">tiếng Việt</string>
     <string name="choose_language">Chọn ngôn ngữ</string>
-    <string name="setting">Cài đặt</string>
+    <string name="settings">Cài đặt</string>
     <string name="change_language">Thay đổi ngôn ngữ</string>
     <string name="dialog_video_info_date_textview" translatable="false">Ngày ghi:</string>
     <string name="dialog_video_info_length_textview" translatable="false">Độ dài:</string>
@@ -91,9 +91,6 @@
     <string name="duration2" translatable="false">Thời lượng:</string>
     <string name="time_added2" translatable="false">Ngày thêm:</string>
     <string name="bottom_dialog_option_info" translatable="false">Thông tin</string>
-    <string name="attachment_title" translatable="false">Tải xuống tệp đính kèm</string>
-    <string name="attachment_summary_on" translatable="false">Tự động tải xuống tệp đính kèm cho các email</string>
-    <string name="attachment_summary_off">Chỉ tải xuống tệp đính kèm khi được yêu cầu</string>
     <string name="dialog_bottom_option_playlist_ic" translatable="false">Thêm vào Playlist</string>
     <string name="dialog_bottom_option_share_ic" translatable="false">Chia sẻ</string>
     <string name="dialog_bottom_option_delete_ic" translatable="false">Xóa</string>
@@ -106,10 +103,6 @@
     <string name="all_videos_textView" translatable="false">Tất cả video</string>
     <string name="item_search" translatable="false">Tìm kiếm</string>
     <string name="dialog_video_info_name_textview" translatable="false">TÊN VIDEO</string>
-    <string name="sync_title" translatable="false">Đồng bộ hóa email định kỳ</string>
-    <string name="reply_title" translatable="false">Hành động trả lời mặc định</string>
-    <string name="sync_header" translatable="false">Đồng bộ hóa</string>
-    <string name="messages_header" translatable="false">Tin nhắn</string>
     <string name="item_list_grid_change" translatable="false">Thay đổi thành danh sách / lưới</string>
     <string name="play_all_songs_from_this_artist" translatable="false">Phát tất cả các bài hát của nghệ sĩ này</string>
     <string name="dialog_video_info_resolution_textview" translatable="false">Độ Phân Giải:</string>
@@ -118,4 +111,6 @@
     <string name="add_to_queue" translatable="false">Thêm vào Xem sau</string>
     <string name="clear_queue_list" translatable="false">Xóa danh sách Xem sau</string>
     <string name="go_to_queue_list" translatable="false">Đi đến danh sách Xem sau</string>
+    <string name="favorites">Yêu thích</string>
+    <string name="more">Thêm</string>
 </resources>
