Refactor playlist's add and update features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="play">Play</string>
     <string name="added_to_watch_later">Added to watch later</string>
     <string name="added_to_favorites">Added to favorites</string>
+    <string name="no_playlist_item_to_play">There is nothing to play! Please add a few items</string>
 </resources>
