--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -130,4 +130,5 @@
     <string name="play">Phát</string>
     <string name="added_to_watch_later">Đã thêm vào xem sau</string>
     <string name="added_to_favorites">Đã thêm vào yêu thích</string>
+    <string name="no_playlist_item_to_play">Không có gì để phát! Hãy thêm vài thứ</string>
 </resources>
