--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,7 @@
     <string name="added_to_watch_later">Added to watch later</string>
     <string name="added_to_favorites">Added to favorites</string>
     <string name="no_playlist_item_to_play">There is nothing to play! Please add a few items</string>
+    <string name="general">General</string>
+    <string name="resume_previous_position">Resume previous position</string>
+    <string name="display_music_visualizer">Display music visualizer</string>
 </resources>
