--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,4 +167,7 @@
     <string name="released_in">released in</string>
     <string name="default_year" translatable="false">2021</string>
     <string name="n_a" translatable="false">N/A</string>
+    <string name="choose_a_playlist">Choose a playlist</string>
+    <string name="added_to_playlist">Added to playlist</string>
+    <string name="item_already_added">Item already added</string>
 </resources>
