--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,4 +170,5 @@
     <string name="choose_a_playlist">Choose a playlist</string>
     <string name="added_to_playlist">Added to playlist</string>
     <string name="item_already_added">Item already added</string>
+    <string name="you_are_not_playing_from_a_playlist">You are not playing from a playlist</string>
 </resources>
