--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -141,4 +141,5 @@
     <string name="added_to_playlist">Đã thêm vào danh sách phát</string>
     <string name="item_already_added">Đã có sẵn</string>
     <string name="you_are_not_playing_from_a_playlist">Bạn không phát từ một danh sách phát</string>
+    <string name="clear_history">Xóa lịch sử</string>
 </resources>
