--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -145,4 +145,5 @@
     <string name="resume_last_playback_position">Phát từ vị trí cuối</string>
     <string name="yes">Có</string>
     <string name="delete_all">Xóa toàn bộ</string>
+    <string name="added_to_listen_later">Thêm vào nghe sau</string>
 </resources>
